tests/snapshots/integration__integration_tests__push__push_dirty_target.snap
---
source: tests/integration_tests/push.rs
info:
  program: wt
  args:
    - push
    - main
  env:
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Cannot push: conflicting uncommitted changes in:
  - conflict.txt
Error: Git command failed: Commit or stash changes in [REPO] first
